Revision history for HTTP-Message

{{$NEXT}}

6.42      2022-10-18 13:53:22Z
    - We now don't consider the Content-Location header when asked
      for the base URI. RFC 7231 says we shouldn't. (GH#51) (Neil Bowers)
    - Increased the (max) buffer size for read() when processing form data,
      from 2048 to 8192. This was suggested in RT#105184, as it improved
      performance for them. (GH#59) (Neil Bowers)

6.41      2022-10-12 15:57:40Z
    - Add maximum size for HTTP::Message->decoded_content
      This can be used to limit the size of a decompressed HTTP response,
      especially when making requests to untrusted or user-specified servers.
      The $HTTP::Message::MAXIMUM_BODY_SIZE variable and the ->max_body_size
      accessor can set this limit. (GH#181) (Max Maischein)

6.40      2022-10-12 15:45:52Z
    - Fixed two typos in the doc, originally reported by FatherC
      in RT#90716, ported over as GH#57. (GH#57) (Neil Bowers)

6.39      2022-10-08 13:48:26Z
    - Remove Travis config (GH#180) (Olaf Alders)
    - Added status_constant_name() which maps status code
      to the name of the corresponding constant. (GH#160) (Neil Bowers)
    - Updated the doc for status_message() to clarify that it
      returns "Not Found" and not "HTTP_NOT_FOUND". (GH#160) (Neil Bowers)

6.38      2022-10-06 21:48:18Z
    - Replace "base" with "parent" (GH#176) (James Raspass)
    - Replace "print" with "note" in tests (GH#178) (James Raspass)
    - Noted that OPTIONS supported was added in 6.1, to the doc
      for HTTP::Request::Common. Addresses GH#177. (GH#179) (Neil Bowers)

6.37      2022-06-14 14:08:55Z
    - Support for Brotli "br" encoding (GH#163) (trizen and Julien Fiegehenn)
    - Don't test Perl > 5.32 on Windows in GH Actions (GH#174) (Olaf Alders)

6.36      2022-01-05 14:39:42Z
    - Fix examples in HTTP::Request::Common synopsis: HTTP::Request::Common
      does not put headers in an arrayref, unlike HTTP::Request (GH#170) (Karen
      Etheridge)